Trying to fix view-height issues on mobile

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+#landing-page {
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+}
+
 #scroll-menu > .nav-link.active {
     font-weight: bold;
     position: relative;
